# ocel-studio

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/: release-readme.txt
.github/workflows/: ci.yml  release.yml
docs/: connector-contract.md
docs/adr/: 0001-local-first-architecture.md  0002-education-first-ux.md  0003-information-architecture.md  0004-data-source-management.md
docs/design/: design-system.md  user-story-map.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  Cases.tsx  Conformance.tsx  Flow.tsx  Insights.tsx  Model.tsx  Variants.tsx  Workspace.tsx  api.ts  i18n.tsx  preferences.ts  styles.css
frontend/src/workspace/: FileList.tsx  PipelineDag.tsx  Recipes.tsx  SourceRow.tsx  Sources.tsx  StepEditor.tsx
src/: main.rs  server.rs
src/server/: analysis.rs  mod.rs  models.rs  recipes.rs  sources.rs  workspace.rs
