[package]
name = "ocel-studio"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"
publish = false
repository = "https://github.com/katsut/ocel-studio"
description = "Local-first process mining studio for OCEL 2.0 event logs"

[dependencies]
ocel = "0.1.4"
ocel-mine = "0.1.2"
ocel-transform = "0.1.1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust-embed = "8"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dirs = "6"
# Linux uses the pure-Rust zbus secret-service backend — no system libdbus
keyring = { version = "3", features = ["apple-native", "windows-native", "async-secret-service", "tokio", "crypto-rust"] }

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
